Add basic support for visualization scripts with one example
- add an entry to the docker-compose for the viz script runner
- it uses a custom dockerfile because we want to add some other dependencies
    - the notebook additions
    - nbparametrize
- custom start script

All of this was based on:
https://github.com/e-mission/e-mission-docker/tree/master/examples/juypter-notebook

Add one simple visualization that displays the mode_confirm over time,
expanding the really small entries into their own graph

Mount the plot volumes correctly so that the output from the viz script
container is visible in the static http server directory (it has to be under
the root directory)

Testing done:
- deleted previous plots
- Ran the notebook
- ensured that there were new plots

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,9 +9,24 @@ services:
       - "3274:8080"
     volumes:
       - ./frontend:/public
-      - plot-data:/plots
+      - ./plots:/public/plots
     networks:
        - emission
+  notebook-server:
+    build: viz_scripts/docker
+    depends_on:
+      - db
+    environment:
+      - DB_HOST=db
+      - WEB_SERVER_HOST=0.0.0.0
+    ports:
+      # ipynb in numbers
+      - "47962:8888"
+    networks:
+      - emission
+    volumes:
+      - ./viz_scripts:/usr/src/app/saved-notebooks
+      - ./plots:/plots
   db:
     image: mongo:4.4.0
     volumes:
@@ -24,6 +39,4 @@ networks:
 
 volumes:
   mongo-data:
-  plot-data:
-    
 
