Add support for a crontab to automatically compute the metrics
Copy over the crontab from the analysis multi-tier setup
https://github.com/e-mission/e-mission-docker/tree/master/examples/em-server-multi-tier-cronjob/analysis

`start_cron` and `start_notebook` are almost identical, so control automated
and interactive run modes using an environment variable

`CRON_MODE=` is set to empty by default, making interactive development easy
`CRON_MODE=TRUE` will launch the container in cron mode for automated recalculation

Testing done:
- Ran with `CRON_MODE=` and checked that the notebook executed successfully
- Ran with `CRON_MODE=TRUE` and the test crontab entry enabled, and checked
  that the most recent notebook is recomputed every 5 mins

```
kshankar-35069s:viz_scripts kshankar$ ls -al ../plots/
total 272
drwxr-xr-x   8 kshankar  18434217    256 Jan 24 22:36 .
drwxr-xr-x  11 kshankar  18434217    352 Jan 25 00:29 ..
-rw-r--r--   1 kshankar  18434217  23385 Jan 25 00:31 mode_confirm_2020_11_prepilot.png
-rw-r--r--   1 kshankar  18434217  23578 Jan 25 00:32 mode_confirm_2020_12_prepilot.png
-rw-r--r--   1 kshankar  18434217  22863 Jan 24 23:47 mode_confirm_2021_01_prepilot.png
-rw-r--r--   1 kshankar  18434217  11150 Jan 25 00:31 mode_confirm_misc_expand_2020_11_prepilot.png
-rw-r--r--   1 kshankar  18434217  30392 Jan 25 00:32 mode_confirm_misc_expand_2020_12_prepilot.png
-rw-r--r--   1 kshankar  18434217  17572 Jan 24 23:47 mode_confirm_misc_expand_2021_01_prepilot.png
kshankar-35069s:viz_scripts kshankar$ ls -al ../plots/
total 272
drwxr-xr-x   8 kshankar  18434217    256 Jan 24 22:36 .
drwxr-xr-x  11 kshankar  18434217    352 Jan 25 00:35 ..
-rw-r--r--   1 kshankar  18434217  23385 Jan 25 00:31 mode_confirm_2020_11_prepilot.png
-rw-r--r--   1 kshankar  18434217  23578 Jan 25 00:32 mode_confirm_2020_12_prepilot.png
-rw-r--r--   1 kshankar  18434217  22903 Jan 25 00:40 mode_confirm_2021_01_prepilot.png
-rw-r--r--   1 kshankar  18434217  11150 Jan 25 00:31 mode_confi

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,6 +19,7 @@ services:
     environment:
       - DB_HOST=db
       - WEB_SERVER_HOST=0.0.0.0
+      - CRON_MODE=
     ports:
       # ipynb in numbers
       - "47962:8888"
