Add an environment file for the dashboard specific packages
+ improve load to cp the zipped file and unzip + restore in the container

--- a/viz_scripts/docker/Dockerfile
+++ b/viz_scripts/docker/Dockerfile
@@ -1,8 +1,10 @@
 # python 3
 FROM emission/e-mission-server:2.9.2
 
+ADD environment36.dashboard.additions.yml /
+
 RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file setup/environment36.notebook.additions.yml"
-RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && pip install nbparameterise && pip install devcron"
+RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file /environment36.dashboard.additions.yml"
 
 ADD start_notebook.sh /usr/src/app/start_notebook.sh
 RUN chmod u+x /usr/src/app/start_notebook.sh
