Heavy lifting for the split into two separate dev and production environments
In both:
- use the `dev-only` image and clone from Andrew's repo
    - this is the workaround for
      https://github.com/e-mission/em-public-dashboard/pull/53 until
      https://github.com/e-mission/e-mission-server/pull/875 is merged

In the dev files:
- force a version for the http server
- build the viz_scripts image instead of using a pinned image
    - This subsumes https://github.com/e-mission/em-public-dashboard/pull/53
- Since the context is now `viz_scripts` and not `viz_scripts/docker` to
  maintain consistency with the prod server, change the paths to the various files

In the prod files:
- Remove the mounted code directories
- Change the dockerfiles to copy files into the image

Testing done: This builds, but DOES NOT WORK
Checking this in temporarily so that we can highlight the fix when we do get it to work

```
Building notebook-server
[+] Building 865.9s (20/20) FINISHED
 => [internal] load build definition from Dockerfile                                                                                                                         0.0s
 => => transferring dockerfile: 973B                                                                                                                                         0.0s
 => [internal] load .dockerignore                                                                                                                                            0.1s
 => => transferring context: 2B                                                                                                                                              0.0s
 => [internal] load metadata for docker.io/emission/e-mission-server.dev.server-only:4.0.0                                                                                   0.0s
 => CACHED [1/8] FROM docker.io/emission/e-mission-server.dev.server-only:4.0.0                                                  

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   dashboard:
-    image: danjellz/http-server:latest
+    image: danjellz/http-server:1.4
     depends_on:
       - db
     ports:
@@ -13,7 +13,10 @@ services:
     networks:
        - emission
   notebook-server:
-    image: emission/em-public-dashboard-notebook:1.0.0
+    image: em-pub-dash-dev/viz-scripts
+    build:
+        context: viz_scripts
+        dockerfile: docker/Dockerfile.dev
     depends_on:
       - db
     environment:
