--- a/viz_scripts/docker/Dockerfile.dev
+++ b/viz_scripts/docker/Dockerfile.dev
@@ -1,15 +1,18 @@
 # python 3
-FROM emission/e-mission-server:2.9.2
+FROM emission/e-mission-server.dev.server-only:4.0.0
+ARG SERVER_REPO=https://github.com/aGuttman/e-mission-server.git
+ARG SERVER_BRANCH=dashboard-dependencies
 
-ADD environment36.dashboard.additions.yml /
+ADD docker/environment36.dashboard.additions.yml /
 
+RUN bash -c "/clone_server.sh"
 RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file setup/environment36.notebook.additions.yml"
 RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file /environment36.dashboard.additions.yml"
 
-ADD start_notebook.sh /usr/src/app/start_notebook.sh
+ADD docker/start_notebook.sh /usr/src/app/start_notebook.sh
 RUN chmod u+x /usr/src/app/start_notebook.sh
 
-ADD crontab /usr/src/app/crontab
+ADD docker/crontab /usr/src/app/crontab
 
 EXPOSE 8888
 
