Fix viz_scripts container build for both dev and production
I'm not sure which of these actually fixed the issue, but I think it may be the
WORKDIR because I `docker exec`ed into the container and I did see an
e-mission-server directory even before the change.

```
$ docker exec -it em-public-dashboard_notebook-server_1 /bin/bash
root@eae107992c4a:/usr/src/app# ls
crontab  e-mission-server  saved-notebooks  start_notebook.sh
root@eae107992c4a:/usr/src/app# cd e-mission-server/
root@eae107992c4a:/usr/src/app/e-mission-server# ls
LICENSE                    conf                    emission         runAllTests.sh
OpenSourceLicenses.md      docs                    figs             runIndividualTests.sh
README.md                  e-mission-ipy.bash      front            runSingleTestDebug.sh
ThirdPartyContributors.md  e-mission-jupyter.bash  miniconda.sh     setup
Timeseries_Sample.ipynb    e-mission-locust.bash   modeify.md       zephyr
bin                        e-mission-py.bash       runAllTests.bat
```

Testing done:

- Images build properly on dev

```
db uses an image, skipping
dashboard uses an image, skipping
Building notebook-server
[+] Building 0.4s (14/14) FINISHED
 => [internal] load build definition from Dockerfile.dev                                                                                                                     0.0s
 => => transferring dockerfile: 47B                                                                                                                                          0.0s
 => [internal] load .dockerignore                                                                                                                                            0.0s
 => => transferring context: 2B                                                                                                                                              0.0s
 => [internal] load metadata for docker.io/emission/e-mission-server.dev.server-only:4.0.0        

--- a/viz_scripts/docker/Dockerfile.dev
+++ b/viz_scripts/docker/Dockerfile.dev
@@ -5,7 +5,10 @@ ARG SERVER_BRANCH=dashboard-dependencies
 
 ADD docker/environment36.dashboard.additions.yml /
 
-RUN bash -c "/clone_server.sh"
+RUN /bin/bash -c "/clone_server.sh"
+
+WORKDIR /usr/src/app
+
 RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file setup/environment36.notebook.additions.yml"
 RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file /environment36.dashboard.additions.yml"
 
