Add `/plots` as a volume to all the Dockerfiles
This is the shared volume where the viz scripts save the plots and the frontend
reads them. The `docker-compose` files map an existing host directory to the
specified volume.

This is as per request from NREL IT

> you need to define that in Dockerfile, not in docker compose, we are not using docker compose for deploy on AWS.
> yeah, simply add VOLUME plots in your dockerfile

Testing done:
- Rebuilt the images

```
$ docker-compose -f docker-compose.yml build
db uses an image, skipping
Building notebook-server
[+] Building 0.2s (22/22) FINISHED
=> => naming to docker.io/em-pub-dash-prod/viz-scripts                                                                                                                      0.0s
Building dashboard
[+] Building 0.1s (9/9) FINISHED
=> => naming to docker.io/em-pub-dash-prod/frontend                                                                                                                         0.0s
```

Restarted the containers

```
$ docker-compose -f docker-compose.yml up
Starting em-public-dashboard_db_1 ... done
Recreating em-public-dashboard_notebook-server_1 ... done
Recreating em-public-dashboard_dashboard_1       ... done
```

logged in to the container and checked

```
$ docker exec -it em-public-dashboard_notebook-server_1 /bin/bash
root@dfd9c5b45eb0:/usr/src/app# ls /plots
average_miles_mode_confirm.png
average_miles_mode_confirm2_2021_10_vail.png
average_miles_mode_confirm_.png
...
```

--- a/viz_scripts/docker/Dockerfile
+++ b/viz_scripts/docker/Dockerfile
@@ -3,6 +3,8 @@ FROM emission/e-mission-server.dev.server-only:4.0.0
 ARG SERVER_REPO=https://github.com/aGuttman/e-mission-server.git
 ARG SERVER_BRANCH=dashboard-dependencies
 
+VOLUME /plots
+
 ADD docker/environment36.dashboard.additions.yml /
 
 RUN /bin/bash -c "/clone_server.sh"
