Fix and test cronjobs launch
+ Ensure that the production docker-compose runs the scripts periodically
(CRON=TRUE) instead of starting an interactive juypter terminal
+ Change the set of scripts that are run in the crontab to account for the
refactoring into generic and mode-specific notebooks. Split occured in
9e1745e086070f0d5b56336f39a34c94d4f90bf8

@zackAemmer, note that notebook changes also have to be reflected in the
crontab for them to be run properly as part of the nightly update. Happy to
walk you through how the public dashboard works now to add to your repertoire
of system designs.

Testing done:

The cronjobs are launched but fail with the error

```
python: can't open file 'bin/update_mappings.py': [Errno 2] No such file or directory
python: can't open file 'bin/generate_plots.py': [Errno 2] No such file or directory
python: can't open file 'bin/generate_plots.py': [Errno 2] No such file or directory
python: can't open file 'bin/update_mappings.py': [Errno 2] No such file or directory
python: can't open file 'bin/update_mappings.py': [Errno 2] No such file or directory
python: can't open file 'bin/generate_plots.py': [Errno 2] No such file or directory
...
```

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     environment:
       - DB_HOST=db
       - WEB_SERVER_HOST=0.0.0.0
-      - CRON_MODE=
+      - CRON_MODE=TRUE
     ports:
       # ipynb in numbers
       - "47962:8888"
