Copy the files into the container in docker style
Without this change, the top level directories were not preserved while copying
files into the docker container. Unlike *nix, COPY a . when a is a directory
copies all the files _in_ a into the current directory.

```
$ ls saved-notebooks/
analysis                   generic_timeseries.ipynb        plots.py
clients                    log                             purpose_labels.csv
conf                       mapping_dictionaries.ipynb      scaffolding.py
energy_calculations.ipynb  mode_labels.csv                 storage
energy_intensity.csv       mode_specific_metrics.ipynb     update_mappings.py
generate_plots.py          mode_specific_timeseries.ipynb  variation_across_individuals.ipynb
generic_metrics.ipynb      net
```

Fixed by specifying a target directory, as in `COPY a ./a`

After this change, the directories are retained

```
$ ls saved-notebooks/
auxiliary_files            generic_metrics.ipynb        mode_specific_timeseries.ipynb
bin                        generic_timeseries.ipynb     plots.py
conf                       mapping_dictionaries.ipynb   scaffolding.py
energy_calculations.ipynb  mode_specific_metrics.ipynb  variation_across_individuals.ipynb
```

And the notebooks now run without errors

```
(emission) /usr/src/app/saved-notebooks# python bin/generate_plots.py generic_metrics.ipynb prepilot --date 2022 04
Successfully downloaded config with version 1 for Staging environment for testing programs only and data collection URL https://openpath-stage.nrel.gov/api/
Running at 2022-09-08T06:23:03.828275+00:00 with args Namespace(date=[2022, 4], plot_notebook='generic_metrics.ipynb', program='prepilot')
```

And generate plots

```
 ls /plots/*2022*
/plots/average_miles_mode_confirm_2022_04_prepilot.png
/plots/average_miles_mode_confirm_2022_04_prepilot.txt
/plots/miles_mode_confirm_2022_04_prepilot.png
/plots/miles_mode_confirm_2022_04_prepilot.txt
/plots/ntrips_commute_mode_confirm_2022_04_prepilot.

--- a/viz_scripts/docker/Dockerfile
+++ b/viz_scripts/docker/Dockerfile
@@ -17,9 +17,8 @@ RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env u
 RUN mkdir -p /usr/src/app/saved-notebooks
 WORKDIR /usr/src/app/saved-notebooks
 
-COPY auxiliary_files .
-COPY bin .
-COPY conf .
+COPY auxiliary_files ./auxiliary_files
+COPY bin ./bin
 COPY *.ipynb .
 COPY *.py .
 
