Pass in the study config to the viz scripts instead of hardcoding it
- Define a new environment variable called `STUDY_CONFIG` that can be modified
  for each program
- In `generate_plots.py` read the study config from the environment, falling
  back to `stage-program`

Bonus fix: Improve the debuggability of the script by printing out the URL
before downloading from it, and exiting if the download fails

@zackAemmer FYI in case you want to learn how to pass in variables to a docker
container

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -23,6 +23,7 @@ services:
       - DB_HOST=db
       - WEB_SERVER_HOST=0.0.0.0
       - CRON_MODE=
+      - STUDY_CONFIG=stage-program
     ports:
       # ipynb in numbers
       - "47962:8888"
