--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - DB_HOST=db
       - WEB_SERVER_HOST=0.0.0.0
       - CRON_MODE=TRUE
+      - STUDY_CONFIG=stage-program
     ports:
       # ipynb in numbers
       - "47962:8888"
