Change the dockerfile paths
To be consistent with 41f10f7

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,5 +3,5 @@ FROM danjellz/http-server:1.4
 VOLUME /plots
 
 RUN mkdir -p /public
-COPY ../client /public/client
-COPY ../*.html /public
+COPY client /public/client
+COPY *.html /public
