Change the context path for the production build
To be consistent with
41f10f76c71609b0de76a34676c34285e2c9b94f
and
87e5c8380dff1b8c9400119e601f3b17713897c8

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: "3"
 services:
   dashboard:
     image: em-pub-dash-prod/frontend
-    build:
-        context: frontend
-        dockerfile: docker/Dockerfile
+    build: frontend
     depends_on:
       - db
     ports:
