--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,11 +4,11 @@ VOLUME /plots
 RUN mkdir -p /public
 WORKDIR /public
 
-RUN npm install -g npm@8.14.0 && npm i http-server
+RUN npm install -g npm@8.14.0 && npm i -g http-server
 
 COPY client /public/client
 COPY *.html /public/
 
-EXPOSE 8080
-CMD ["http-server"]
+EXPOSE 5050
+CMD ["http-server", "-p", "5050"]
 
