Move the dockerfile into the primary directory
+ change the docker-compose build

since the AWS version of docker cannot deal with Dockerfiles that are not in
the main directory

Testing done:

- Builds

```
=> [internal] load build definition from Dockerfile    0.0s
=> => transferring dockerfile: 1.05kB    0.0s
=> [internal] load .dockerignore    0.0s
=> => transferring context: 2B    0.0s
=> [internal] load metadata for docker.io/emission/e-mission-server.dev.server-only:4.0.0    0.0s
=> [internal] load build context    0.0s
=> => transferring context: 95.44kB    0.0s
=> [ 1/16] FROM docker.io/emission/e-mission-server.dev.server-only:4.0.0    0.0s                             => CACHED [ 2/16] ADD docker/environment36.dashboard.additions.yml /    0.0s
=> CACHED [ 3/16] RUN /bin/bash -c "/clone_server.sh"    0.0s                                                 => CACHED [ 4/16] WORKDIR /usr/src/app    0.0s
=> CACHED [ 5/16] RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file setup/environment36.notebook.additions.yml"    0.0s
=> CACHED [ 6/16] RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file /environment36.dashboard.additions.yml"    0.0s
=> CACHED [ 7/16] RUN mkdir -p /usr/src/app/saved-notebooks    0.0s
=> CACHED [ 8/16] WORKDIR /usr/src/app/saved-notebooks    0.0s
=> CACHED [ 9/16] COPY auxiliary_files ./auxiliary_files    0.0s                                              => CACHED [10/16] COPY bin ./bin    0.0s
=> CACHED [11/16] COPY *.ipynb .    0.0s
=> CACHED [12/16] COPY *.py .    0.0s
=> CACHED [13/16] WORKDIR /usr/src/app    0.0s                                                                => CACHED [14/16] ADD docker/start_notebook.sh /usr/src/app/start_notebook.sh    0.0s
=> CACHED [15/16] RUN chmod u+x /usr/src/app/start_notebook.sh    0.0s                                        => CACHED [16/16] ADD docker/crontab /usr/src/app/crontab 

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,7 @@ services:
        - emission
   notebook-server:
     image: em-pub-dash-prod/viz-scripts
-    build:
-        context: viz_scripts
-        dockerfile: docker/Dockerfile
+    build: viz_scripts
     depends_on:
       - db
     environment:
