--- a/viz_scripts/docker/Dockerfile.dev
+++ b/viz_scripts/docker/Dockerfile.dev
@@ -14,11 +14,11 @@ WORKDIR /usr/src/app
 RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file setup/environment36.notebook.additions.yml"
 RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file /environment36.dashboard.additions.yml"
 
-ADD docker/start_notebook.sh /usr/src/app/start_notebook.sh
-RUN chmod u+x /usr/src/app/start_notebook.sh
+ADD docker/start_notebook.sh /usr/src/app/.docker/start_notebook.sh
+RUN chmod u+x /usr/src/app/.docker/start_notebook.sh
 
 ADD docker/crontab /usr/src/app/crontab
 
 EXPOSE 8888
 
-CMD ["/bin/bash", "/usr/src/app/start_notebook.sh"]
+CMD ["/bin/bash", "/usr/src/app/.docker/start_notebook.sh"]
