:alien: :construction_worker: Change the build system to use the pre-built server CI images
Instead of installing from Andrew's fork of e-mission server

High level changes:
- use the pre-built docker image
- no need to clone the server
- no need to change into the e-mission-server directory before running server scripts
- no need to include e-mission-server in the PYTHONPATH

Testing done:
- Builds
- automated notebooks run without errors
- manual notebooks run without errors
https://github.nrel.gov/nrel-cloud-computing/nrelopenpath-study-join-page/issues/13#issuecomment-49739

Server dependencies are automatically updated with the server image upgrade

--- a/viz_scripts/Dockerfile
+++ b/viz_scripts/Dockerfile
@@ -1,18 +1,14 @@
 # python 3
-FROM emission/e-mission-server.dev.server-only:4.0.0
-ENV SERVER_REPO=https://github.com/e-mission/e-mission-server.git
-ENV SERVER_BRANCH=join_redirect_to_static
+FROM shankari/e-mission-server:gis-based-mode-detection_2023-04-21--54-09
 
 VOLUME /plots
 
 ADD docker/environment36.dashboard.additions.yml /
 
-RUN /bin/bash -c "/clone_server.sh"
-
 WORKDIR /usr/src/app
 
-RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file setup/environment36.notebook.additions.yml"
-RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file /environment36.dashboard.additions.yml"
+RUN /bin/bash -c "source setup/activate.sh && conda env update --name emission --file setup/environment36.notebook.additions.yml"
+RUN /bin/bash -c "source setup/activate.sh && conda env update --name emission --file /environment36.dashboard.additions.yml"
 
 RUN mkdir -p /usr/src/app/saved-notebooks
 WORKDIR /usr/src/app/saved-notebooks
