--- a/viz_scripts/docker/Dockerfile.dev
+++ b/viz_scripts/docker/Dockerfile.dev
@@ -1,18 +1,14 @@
 # python 3
-FROM emission/e-mission-server.dev.server-only:4.0.0
-ARG SERVER_REPO=https://github.com/aGuttman/e-mission-server.git
-ARG SERVER_BRANCH=dashboard-dependencies
+FROM shankari/e-mission-server:gis-based-mode-detection_2023-07-12--58-55
 
 VOLUME /plots
 
 ADD docker/environment36.dashboard.additions.yml /
 
-RUN /bin/bash -c "/clone_server.sh"
-
 WORKDIR /usr/src/app
 
-RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file setup/environment36.notebook.additions.yml"
-RUN /bin/bash -c "cd e-mission-server && source setup/activate.sh && conda env update --name emission --file /environment36.dashboard.additions.yml"
+RUN /bin/bash -c "source setup/activate.sh && conda env update --name emission --file setup/environment36.notebook.additions.yml"
+RUN /bin/bash -c "source setup/activate.sh && conda env update --name emission --file /environment36.dashboard.additions.yml"
 
 ADD docker/start_notebook.sh /usr/src/app/.docker/start_notebook.sh
 RUN chmod u+x /usr/src/app/.docker/start_notebook.sh
