--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -27,6 +27,7 @@ services:
       - WEB_SERVER_HOST=0.0.0.0
       - CRON_MODE=
       - STUDY_CONFIG=stage-program
+      - DYNAMIC_CONFIG=dev-emulator-study
     ports:
       # ipynb in numbers
       - "47962:8888"
