Adding npm update command to Dockerfile.dev
This is the Dockerfile that docker_compose.dev.yml uses.
Earlier commit included changes in another Dockerfile not referenced by docker_compose.dev.yml but present in the frontend directory.

--- a/frontend/docker/Dockerfile.dev
+++ b/frontend/docker/Dockerfile.dev
@@ -6,6 +6,7 @@ WORKDIR /public
 RUN npm i -g http-server
 
 RUN apk update && apk upgrade busybox
+RUN npm update -g
 
 EXPOSE 6060
 CMD ["http-server", "-p", "6060"]
