Added docker build and push for dashboard and notebook images + Updated viz_scripts Dockerfile
viz_scripts Dockerfile contains ENV variables from docker-compose as well.

Added docker image commands to image_build_push yml for dashboard and notebook images

--- a/.github/workflows/image_build_push.yml
+++ b/.github/workflows/image_build_push.yml
@@ -41,9 +41,11 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: build docker image
       run: |
-        docker build -t $DOCKER_USER/${GITHUB_REPOSITORY#*/}:${GITHUB_REF##*/}_${{ steps.date.outputs.date }} ./frontend
+        docker build -t $DOCKER_USER/${GITHUB_REPOSITORY#*/}_dashboard:${GITHUB_REF##*/}_${{ steps.date.outputs.date }} ./frontend
+        docker build -t $DOCKER_USER/${GITHUB_REPOSITORY#*/}_notebook:${GITHUB_REF##*/}_${{ steps.date.outputs.date }} ./viz_scripts
         docker images
 
     - name: push docker image
       run: |
-        docker push $DOCKER_USER/${GITHUB_REPOSITORY#*/}:${GITHUB_REF##*/}_${{ steps.date.outputs.date }}
+        docker push $DOCKER_USER/${GITHUB_REPOSITORY#*/}_dashboard:${GITHUB_REF##*/}_${{ steps.date.outputs.date }}
+        docker push $DOCKER_USER/${GITHUB_REPOSITORY#*/}_notebook:${GITHUB_REF##*/}_${{ steps.date.outputs.date }}
