Added cert.sh + Modified Dockerfiles
1. docker/cert.sh
- Uses new environment variable PROD_STAGE variable to determine whether in staging / production environment and only then install certificates, else skip.

2. Dockerfile
Added environment variables here, keeping the same default ENV values as the ones in docker-compose.yml.
Not adding in docker/Dockerfile.dev, since this change is being done primarily with the objective to aid with the automated build and push to Dockerhub.
This pushed image would then be the one that would be used in the internal environments as the base image, which would be based on the non-dev Dockerfile.

--- a/viz_scripts/Dockerfile
+++ b/viz_scripts/Dockerfile
@@ -5,8 +5,9 @@ VOLUME /plots
 
 ENV DB_HOST=db
 ENV WEB_SERVER_HOST=0.0.0.0
-ENV CRON_MODE= 
+ENV CRON_MODE=TRUE 
 ENV STUDY_CONFIG=stage-program
+ENV PROD_STAGE=TRUE
 
 ADD docker/environment36.dashboard.additions.yml /
 
@@ -37,6 +38,10 @@ ADD docker/start_notebook.sh /usr/src/app/.docker/start_notebook.sh
 RUN chmod u+x /usr/src/app/.docker/start_notebook.sh
 
 ADD docker/crontab /usr/src/app/crontab
+
+ADD docker/cert.sh /usr/src/app/.docker/cert.sh
+RUN chmod u+x /usr/src/app/.docker/cert.sh
+RUN /usr/src/app/.docker/cert.sh
 
 EXPOSE 8888
 
