--- a/viz_scripts/Dockerfile
+++ b/viz_scripts/Dockerfile
@@ -1,5 +1,6 @@
 # python 3
-FROM shankari/e-mission-server:master_2024-02-10--19-38
+# FROM shankari/e-mission-server:master_2024-02-10--19-38
+FROM mukuflash03/e-mission-server:image-push-merge_2024-04-12--01-01
 
 VOLUME /plots
 
