--- a/viz_scripts/docker/environment36.dashboard.additions.yml
+++ b/viz_scripts/docker/environment36.dashboard.additions.yml
@@ -4,6 +4,8 @@ channels:
 - defaults
 dependencies:
 - seaborn=0.11.1
+- git
 - pip:
   - nbparameterise==0.6
   - devcron==0.4
+  - git+https://github.com/JGreenlee/e-mission-common@0.4.0
