--- a/viz_scripts/docker/Dockerfile.dev
+++ b/viz_scripts/docker/Dockerfile.dev
@@ -1,7 +1,8 @@
 # python 3
 # FROM shankari/e-mission-server:master_2024-02-10--19-38
 # Please change once all PR changes are final, so it reads from shankari/e-mission-server
-FROM mukuflash03/e-mission-server:image-push-merge_2024-04-16--49-36
+ARG DOCKER_IMAGE_TAG
+FROM mukuflash03/e-mission-server:tags-combo-approach_${DOCKER_IMAGE_TAG}
 
 VOLUME /plots
 
