Added TODOs in github actions workflow YAML file
Reminder for things to change as per master branch of e-mission-server once changes are finalized.

--- a/.github/workflows/image_build_push.yml
+++ b/.github/workflows/image_build_push.yml
@@ -73,6 +73,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
+          # TODO: Create a token with basic repo permissions
           name: docker-image-tag
           github-token: ${{ secrets.GH_PAT_TAG }}
           repository: MukuFlash03/e-mission-server
@@ -133,7 +134,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .env
-        git commit -m "Updated docker image tag in .env to the latest timestamp: ${{ env.DOCKER_IMAGE_TAG_2 }}"
+        git commit -m "Updated docker image tag in .env to the latest timestamp"
         git push origin 
 
     - name: docker login
