--- a/viz_scripts/Dockerfile
+++ b/viz_scripts/Dockerfile
@@ -1,5 +1,5 @@
 # python 3
-# Please change once all PR changes are final, so it reads from shankari/e-mission-server
+# TODO: Please change once all PR changes are final, so it reads from shankari/e-mission-server
 # FROM shankari/e-mission-server:master_2024-02-10--19-38
 ARG DOCKER_IMAGE_TAG
 FROM mukuflash03/e-mission-server:tags-combo-approach_${DOCKER_IMAGE_TAG}
