--- a/.github/workflows/image_build_push.yml
+++ b/.github/workflows/image_build_push.yml
@@ -74,6 +74,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           # TODO: Create a token with basic repo permissions
+          # TODO: Change user / organization to emission instead of MukuFlash03
           name: docker-image-tag
           github-token: ${{ secrets.GH_PAT_TAG }}
           repository: MukuFlash03/e-mission-server
@@ -133,9 +134,13 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add .env
-        git commit -m "Updated docker image tag in .env to the latest timestamp"
-        git push origin 
+        if git diff --quiet; then
+          echo "Latest timestamp already present in .env file, no changes to commit"
+        else
+          git add .env
+          git commit -m "Updated docker image tag in .env file to the latest timestamp"
+          git push origin 
+        fi
 
     - name: docker login
       run: | # log into docker hub account
