--- a/.github/workflows/image_build_push.yml
+++ b/.github/workflows/image_build_push.yml
@@ -1,16 +1,8 @@
-# This is a basic workflow to help you get started with Actions
-
 name: docker-image-push-public-dash
 
-# Controls when the action will run. Triggers the workflow on push or pull request 
-# events but only for the master branch
 on:
   push:
-    # Mukul:
-    # I've added a local test branch on my system and using it for testing image push.
-    # So, for testing purposes, need to checkout a branch "tags-combo-approach"
-    # TODO: Need to change to build off master or main once it looks good.
-    branches: [ tags-combo-approach ]
+    branches: [ main ]
 
   workflow_dispatch:
     inputs:
@@ -18,12 +10,10 @@ on:
         description: "Latest Docker image tags passed from e-mission-server repository on image build and push"
         required: true
 
-# Env variable
 env:
   DOCKER_USER: ${{secrets.DOCKER_USER}}
   DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   fetch_run_id:
     runs-on: ubuntu-latest
@@ -74,10 +64,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           # TODO: Create a token with basic repo permissions
-          # TODO: Change user / organization to emission instead of MukuFlash03
           name: docker-image-tag
           github-token: ${{ secrets.GH_PAT_TAG }}
-          repository: MukuFlash03/e-mission-server
+          repository: e-mission/e-mission-server
           run-id: ${{ env.RUN_ID }}
 
       - name: Print artifact tag
@@ -87,31 +76,16 @@ jobs:
           docker_image_tag=$(cat tag_file.txt)
           echo $docker_image_tag
           echo "docker_image_tag=$(echo $docker_image_tag)" >> $GITHUB_OUTPUT
-
-      # - name: Upload Artifact
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: docker-image-tag
-      #     path: tag_file.txt
-      #     overwrite: true
-
-      # - name: List artifact
-      #   run: ls -R 
-
-  # This workflow contains a single job called "build"
   build:
     needs: fetch_tag
 
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     env:
       DOCKER_IMAGE_TAG_1: ${{ needs.fetch_tag.outputs.docker_image_tag }}
       DOCKER_IMAGE_TAG_2: ${{ github.event.inputs.docker_image_tag }}
       
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v4
 
     - name: Print input docker image tag
@@ -150,11 +124,9 @@ jobs:
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
 
-    #Runs a single command using the runners shell
     - name: Run a one-line script
       run: echo running in repo ${GITHUB_REPOSITORY#*/} branch ${GITHUB_REF##*/} on ${{ steps.date.outputs.date }}
 
-    # Runs a set of commands using the runners shell
     - name: build docker image
       run: |
         if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
