--- a/viz_scripts/Dockerfile
+++ b/viz_scripts/Dockerfile
@@ -2,6 +2,8 @@
 ARG DOCKER_IMAGE_TAG
 FROM shankari/e-mission-server:master_${DOCKER_IMAGE_TAG}
 
+ADD https://s3.amazonaws.com/rds-downloads/rds-combined-ca-bundle.pem /etc/ssl/certs/
+
 VOLUME /plots
 
 ADD docker/environment36.dashboard.additions.yml /
