--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: "3"
 services:
   dashboard:
     image: em-pub-dash-prod/frontend
-    build: 
-      context: frontend
-      dockerfile: Dockerfile
+    build: frontend
     depends_on:
       - db
     ports:
