--- a/viz_scripts/docker/Dockerfile.dev
+++ b/viz_scripts/docker/Dockerfile.dev
@@ -1,7 +1,7 @@
 # python 3
 
-ARG DOCKER_IMAGE_TAG
-FROM shankari/e-mission-server:master_${DOCKER_IMAGE_TAG}
+ARG SERVER_IMAGE_TAG
+FROM shankari/e-mission-server:master_${SERVER_IMAGE_TAG}
 
 VOLUME /plots
 
