--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   dashboard:
-    image: em-pub-dash-prod/frontend
+    image: ${FRONTEND_TAG}
     build: frontend
     depends_on:
       - db
@@ -13,12 +13,12 @@ services:
     networks:
        - emission
   notebook-server:
-    image: em-pub-dash-prod/viz-scripts
+    image: ${VIZ_TAG}
     build: 
       context: viz_scripts
       dockerfile: Dockerfile
       args:
-        DOCKER_IMAGE_TAG: ${DOCKER_IMAGE_TAG}
+        SERVER_IMAGE_TAG: ${SERVER_IMAGE_TAG}
     depends_on:
       - db
     environment:
