Updating tag name

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,7 +21,7 @@ services:
       context: viz_scripts
       dockerfile: docker/Dockerfile.dev
       args:
-        DOCKER_IMAGE_TAG: ${DOCKER_IMAGE_TAG}
+        SERVER_IMAGE_TAG: ${SERVER_IMAGE_TAG}
     depends_on:
       - db
     environment:
