Adding artifact upload
Adding a step to upload an artifact with the newly created image tag. This way, the file can be pulled into the internal repo with GH API.

--- a/.github/workflows/image_build_push.yml
+++ b/.github/workflows/image_build_push.yml
@@ -139,3 +139,15 @@ jobs:
       run: |
         docker push $DOCKER_USER/${GITHUB_REPOSITORY#*/}:${GITHUB_REF##*/}_${{ steps.date.outputs.date }}
         docker push $DOCKER_USER/${GITHUB_REPOSITORY#*/}_notebook:${GITHUB_REF##*/}_${{ steps.date.outputs.date }}
+   
+    - name: Create a text file
+      run: |
+          echo ${{ steps.date.outputs.date }} > public_dash_tag_file.txt
+          echo "Created tag text file"
+
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+          name: public-dash-image-tag
+          path: public_dash_tag_file.txt
+          overwrite: true
